# ClientServerTask

./: CMakeLists.txt  README.md  serveraddr.json
client/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  ServerConnection.cpp  ServerConnection.h  prog1.cpp
server/: CMakeLists.txt  Server.cpp  Server.h  prog2.cpp
